@@ -1,5 +1,11 @@
 2012-08-28  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	* elf32-ppc.c (ppc_elf_relocate_section): Assert that dynindx is
+	not minus one.
+	* elf64-ppc.c (ppc64_elf_relocate_section): Likewise.
+
+2012-08-28  Maciej W. Rozycki  <macro@codesourcery.com>
+
 	* elflink.c (_bfd_elf_merge_symbol): Also override the version
 	a dynamic symbol defaulted to if preempted with a hidden or
 	internal definition.
